--- a/Crypto exchange arbitrage .ipynb
+++ b/Crypto exchange arbitrage .ipynb
@@ -15,9 +15,9 @@
     "#Binance API\n",
     "from binance.client import Client\n",
     "\n",
-    "# This API key is limited to read data only ;)\n",
+    "# This API key is disabled;)\n",
     "api_key = \"ZevsUzyFfmvllzxrCyLxiDHGLQ6FHymqofqVdEpk2pWOP9mCAn2bRmabgZmgJhRM\"\n",
-    "api_secret = \"PSrimyTIIQ3S7xipyWGtvgMNawkRKT7149ElTt3BogDvkyf4F44sLPi3GQiBgdfD\"\n",
+    "api_secret = \"your_data\"\n",
     "client = Client(api_key, api_secret)\n",
     "\n",
     "#Coinbase API\n",
